<resources>
    <string name="app_name">RoboBasicBluetoothControl</string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">MAC address</string>
    <string name="debug">debug</string>
    <string name="send">send</string>
    <string name="send_info">send some data</string>
    <string name="debug_info">Debug text output:</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="start_scan">start scanning</string>
    <string name="default_message">some message returned from the robot</string>
    <string name="connection_status">Connection status</string>
    <string name="disconnect">disconnect</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="bluetooth_class">unknown class</string>
    <string name="loading_shared_prefs">Trying to load saved data from SharedPreferences…</string>
    <string name="title_activity_move_list">MoveListActivity</string>
    <string name="placeholder">There\'s nothing to see here yet. please leave.</string>
    <string name="return_text">return</string>
    <string name="bluetooth_service_connected">connected to bluetooth service</string>
    <string name="bluetooth_service_disconnected">bluetooth service disconnected</string>
    <string name="default_move_name">Default Move Name</string>

    <!-- shared preferences -->
    <string name="preference_file_key">de.othr.robobasic.robobasicbluetoothcontrol.PREFERENCE_FILE_KEY</string>
    <string name="saved_mac_address_key">de.othr.robobasic.robobasicbluetoothcontrol.MAC_ADDRESS_KEY</string>
    <string name="cont_descr_move_icon">Move Icon</string>
    <string name="move_list">move list</string>
    <string name="ok">OK</string>
    <string name="location_access_req">location access required</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="scanning">scanning..</string>
    <string name="share">Share</string>
    <string name="send_to">send terminal content to</string>
    <string name="unknown_uuid">unknown uuid</string>
    <string name="notify">Notify</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
</resources>
