<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <TextView
        android:id="@+id/tv_item_device_name"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:gravity="bottom"
        android:text="@string/device_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_device_mac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/mac_address"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/tv_item_device_class"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/bluetooth_class"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </LinearLayout>

</LinearLayout>